--- a/animation.html
+++ b/animation.html
@@ -13,7 +13,7 @@
 
 0%{background-color: brown;}
 20%{background-color: aqua;}
-40%{background-color: rgb(194, 207, 203);}
+40%{background-color: blueviolet;}
 60%{background-color: azure;}
 80%{background-color: black;}
 100%{background-color: blue;}
@@ -51,8 +51,9 @@ animation-duration: 30s;
 
 
 <body>
-
-
+<p>Did you like it?</p>
+<button>YES</button>
+<button disabled>NO</button>
 
 
 
