--- a/thefirstwebpage.html
+++ b/thefirstwebpage.html
@@ -1,7 +1,15 @@
 <html>
 
+
+
+
+
 <head>
-<title> FIRST WEB PAGE</title>
+
+
+
+<title></title>
+
 
 
 
@@ -12,7 +20,7 @@
 
 <body>
 
- <h1> MY FIRST WEB PAGE</h1>   
+ <h1> MY FIRST WEB PAGE</h1>  
  
 </body>
 
