--- a/bankingapp.html
+++ b/bankingapp.html
@@ -8,12 +8,24 @@
 
 body{
 
-background-image:url(MeezanBank3.jpg);
+background-image:url(Bank1.jpeg);
+
+}
+
+h3{
+
+ color: white;
+
+}
 
 
+h2{
+    color: white;
+}
 
-
-
+label{
+    color: white;
+}
 </style>
 
 
@@ -31,12 +43,12 @@ background-image:url(MeezanBank3.jpg);
 
 <div class="container">
 <div class="row">
-<h3>Banking App</h3>
+<h3><i>Banking App</i></h3>
 
 </div>
 
 <div class="ETM">
- <h2>Enter Transaction Amount</h2>
+ <h2><i>Enter Transaction Amount</i></h2>
 <input type="number" id="amount">
 </div>
 
